# ravioli

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: codecov.yml  ravioli.yml
docs/: conf.py  genindex.html  index.rst  modules.html  py-modindex.html  ravioly.html  searchindex.js
docs/html/: .buildinfo  index.html  objects.inv  search.html
docs/html/_sources/: modules.rst.txt  ravioly.rst.txt
ravioli/: datastructure.py
ravioly/: datastructure.py
tests/: samples.csv  test_ravioli.py  test_ravioly.py
