[tool.poetry]
name = "ravioli"
version = "0.1.0"
description = "Data structure to handle New York city taxi data."
authors = ["yleprince <yrieix.leprince@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
isort = "^4.3.21"
flake8 = "^3.8.1"
black = "^19.10b0"
taskipy = "^1.2.1"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.taskipy.tasks]
lint = "task lint_isort && task lint_mypy && task lint_black && task lint_flake8"
lint_isort = "isort -rc --diff"
lint_mypy = "mypy ./"
lint_black = "black . --check --diff"
lint_flake8 = "flake8 ."
test_cov = "pytest --cov --cov-fail-under=100"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
